# file-renamer

./: .gitignore  README.md  pyproject.toml
pip/: dev-requirements-linux.txt  dev-requirements-win.txt  dev-requirements.txt  requirements.txt
scripts/: .xonshrc  file-renamer.xsh  run.sh
spec/: app-linux.spec  app-win.spec
src/file_renamer/: form.ui  gui.py  rename.py  ui_form.py  widget.py
src/file_renamer/cli/: __init__.py
src/file_renamer/lib/: case.py  exceptions.py  files.py  html.py
src/file_renamer/themes/: linux_dark.qss  windows_light.qss
src/file_renamer/themes/dark/: dark_linux.py  dark_linux.qss  dark_windows.py  dark_windows.qss
src/file_renamer/themes/light/: light_linux.py  light_linux.qss  light_windows.py
