[build-system]
requires = ["setuptools ~= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "io.github.flossapps.file-renamer"
authors = [{name = "Carlos"}]
description = "A desktop app for Linux and Windows for batch renaming files."
readme = "README.md"
requires-python = ">=3.13"
keywords = [
    "app", "gui", "rename", "rename-files", "batch-rename-files", "renamer",
    "linux-desktop", "ubuntu", "fedora", "windows-desktop", "pyside6",
    "qt-creator"
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
    "PySide6~=6.9.1",
    "PySide6-Addons~=6.9.1",
    "PySide6-Essentials~=6.9.1",
    "shiboken6~=6.9.1",
    "Unidecode~=1.4.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "file_renamer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
file-renamer = "file_renamer.cli:main"

[project.urls]
Homepage = "https://github.com/flossapps/file-renamer"
Repository = "https://github.com/flossapps/file-renamer.git"
